update publications: GMD paper and citation instructions

--- a/_modules/thetis/assembledschur.html
+++ b/_modules/thetis/assembledschur.html
@@ -6,14 +6,14 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>thetis.assembledschur &#8212; Thetis 0+untagged.1213.g0b06141 documentation</title>
+    <title>thetis.assembledschur &#8212; Thetis 0+untagged.1276.g4e1ded2 documentation</title>
     <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
-    <script type="text/javascript" src="../../_static/documentation_options.js"></script>
+    <script type="text/javascript" id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
     <script type="text/javascript" src="../../_static/jquery.js"></script>
     <script type="text/javascript" src="../../_static/underscore.js"></script>
     <script type="text/javascript" src="../../_static/doctools.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script async="async" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
 <!--[if lte IE 6]>
@@ -69,11 +69,11 @@
 
 <span class="sd">    - :math:`A01`, :math:`A10` are the assembled sub-blocks of the saddle point</span>
 <span class="sd">        system. The form of this system needs to be supplied in the</span>
-<span class="sd">        :math:`appctx` to the solver as :math:`appctx[&#39;a&#39;]`.</span>
+<span class="sd">        :code:`appctx` argument to the solver as :code:`appctx[&#39;a&#39;]`.</span>
 
 <span class="sd">    - :math:`Minv` is the inverse of the mass-matrix which is assembled as</span>
-<span class="sd">        :math:`assemble(v*u*dx, inverse=True)`, i.e. the element-wise inverse,</span>
-<span class="sd">        where :math:`v` and :math:`u` are the test and trial of the :math:`00`</span>
+<span class="sd">        :code:`assemble(v*u*dx, inverse=True)`, i.e. the element-wise inverse,</span>
+<span class="sd">        where :math:`v` and :math:`u` are the test and trial of the :math:`A00`</span>
 <span class="sd">        block. This gives the exact inverse of the mass matrix for a DG</span>
 <span class="sd">        discretisation.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
@@ -142,7 +142,7 @@
         <span class="n">viewer</span><span class="o">.</span><span class="n">popASCIITab</span><span class="p">()</span></div>
 
 <div class="viewcode-block" id="AssembledSchurPC.applyTranspose"><a class="viewcode-back" href="../../thetis.html#thetis.assembledschur.AssembledSchurPC.applyTranspose">[docs]</a>    <span class="k">def</span> <span class="nf">applyTranspose</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">pc</span><span class="p">,</span> <span class="n">X</span><span class="p">,</span> <span class="n">Y</span><span class="p">):</span>
-        <span class="k">raise</span> <span class="bp">NotImplemented</span><span class="p">(</span><span class="s2">&quot;applyTranspose not implemented for AssembledSchurPC&quot;</span><span class="p">)</span></div></div>
+        <span class="k">raise</span> <span class="ne">NotImplementedError</span><span class="p">(</span><span class="s2">&quot;applyTranspose not implemented for AssembledSchurPC&quot;</span><span class="p">)</span></div></div>
 </pre></div>
 
           </div>
@@ -153,7 +153,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2016-2018, Tuomas Karna et al..
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.7.4.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.8.1.
     </div>
   </body>
 </html>
