--- a/_modules/thetis/stability_functions.html
+++ b/_modules/thetis/stability_functions.html
@@ -6,14 +6,14 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>thetis.stability_functions &#8212; Thetis 0+untagged.1213.g0b06141 documentation</title>
+    <title>thetis.stability_functions &#8212; Thetis 0+untagged.1276.g4e1ded2 documentation</title>
     <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
-    <script type="text/javascript" src="../../_static/documentation_options.js"></script>
+    <script type="text/javascript" id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
     <script type="text/javascript" src="../../_static/jquery.js"></script>
     <script type="text/javascript" src="../../_static/underscore.js"></script>
     <script type="text/javascript" src="../../_static/doctools.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script async="async" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
 <!--[if lte IE 6]>
@@ -282,13 +282,13 @@
 <span class="sd">        :arg alpha_buoy: normalized buoyancy frequency :math:`\alpha_N`</span>
 <span class="sd">        :arg alpha_shear: normalized shear frequency :math:`\alpha_M`</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="n">as_max_n</span> <span class="o">=</span> <span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">d0</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">n0</span> <span class="o">+</span>
-                    <span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">d0</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">n1</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">d1</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">n0</span><span class="p">)</span><span class="o">*</span><span class="n">alpha_buoy</span> <span class="o">+</span>
-                    <span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">d1</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">n1</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">d4</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">n0</span><span class="p">)</span><span class="o">*</span><span class="n">alpha_buoy</span><span class="o">**</span><span class="mi">2</span> <span class="o">+</span>
-                    <span class="bp">self</span><span class="o">.</span><span class="n">d4</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">n1</span><span class="o">*</span><span class="n">alpha_buoy</span><span class="o">**</span><span class="mi">3</span><span class="p">)</span>
-        <span class="n">as_max_d</span> <span class="o">=</span> <span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">d2</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">n0</span> <span class="o">+</span>
-                    <span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">d2</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">n1</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">d3</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">n0</span><span class="p">)</span><span class="o">*</span><span class="n">alpha_buoy</span> <span class="o">+</span>
-                    <span class="bp">self</span><span class="o">.</span><span class="n">d3</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">n1</span><span class="o">*</span><span class="n">alpha_buoy</span><span class="o">**</span><span class="mi">2</span><span class="p">)</span>
+        <span class="n">as_max_n</span> <span class="o">=</span> <span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">d0</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">n0</span>
+                    <span class="o">+</span> <span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">d0</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">n1</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">d1</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">n0</span><span class="p">)</span><span class="o">*</span><span class="n">alpha_buoy</span>
+                    <span class="o">+</span> <span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">d1</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">n1</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">d4</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">n0</span><span class="p">)</span><span class="o">*</span><span class="n">alpha_buoy</span><span class="o">**</span><span class="mi">2</span>
+                    <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">d4</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">n1</span><span class="o">*</span><span class="n">alpha_buoy</span><span class="o">**</span><span class="mi">3</span><span class="p">)</span>
+        <span class="n">as_max_d</span> <span class="o">=</span> <span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">d2</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">n0</span>
+                    <span class="o">+</span> <span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">d2</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">n1</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">d3</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">n0</span><span class="p">)</span><span class="o">*</span><span class="n">alpha_buoy</span>
+                    <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">d3</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">n1</span><span class="o">*</span><span class="n">alpha_buoy</span><span class="o">**</span><span class="mi">2</span><span class="p">)</span>
         <span class="k">return</span> <span class="n">as_max_n</span><span class="o">/</span><span class="n">as_max_d</span></div>
 
 <div class="viewcode-block" id="StabilityFunction.get_alpha_buoy_smooth_min"><a class="viewcode-back" href="../../thetis.html#thetis.stability_functions.StabilityFunction.get_alpha_buoy_smooth_min">[docs]</a>    <span class="k">def</span> <span class="nf">get_alpha_buoy_smooth_min</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">alpha_buoy</span><span class="p">):</span>
@@ -469,7 +469,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2016-2018, Tuomas Karna et al..
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.7.4.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.8.1.
     </div>
   </body>
 </html>
