--- a/_modules/index.html
+++ b/_modules/index.html
@@ -6,14 +6,14 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Overview: module code &#8212; Thetis 0+untagged.1213.g0b06141 documentation</title>
+    <title>Overview: module code &#8212; Thetis 0+untagged.1276.g4e1ded2 documentation</title>
     <link rel="stylesheet" href="../_static/thetis.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
-    <script type="text/javascript" src="../_static/documentation_options.js"></script>
+    <script type="text/javascript" id="documentation_options" data-url_root="../" src="../_static/documentation_options.js"></script>
     <script type="text/javascript" src="../_static/jquery.js"></script>
     <script type="text/javascript" src="../_static/underscore.js"></script>
     <script type="text/javascript" src="../_static/doctools.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script async="async" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
 <!--[if lte IE 6]>
@@ -67,6 +67,7 @@
 <li><a href="thetis/interpolation.html">thetis.interpolation</a></li>
 <li><a href="thetis/limiter.html">thetis.limiter</a></li>
 <li><a href="thetis/momentum_eq.html">thetis.momentum_eq</a></li>
+<li><a href="thetis/optimisation.html">thetis.optimisation</a></li>
 <li><a href="thetis/options.html">thetis.options</a></li>
 <li><a href="thetis/rungekutta.html">thetis.rungekutta</a></li>
 <li><a href="thetis/shallowwater_eq.html">thetis.shallowwater_eq</a></li>
@@ -77,6 +78,7 @@
 <li><a href="thetis/timezone.html">thetis.timezone</a></li>
 <li><a href="thetis/tracer_eq.html">thetis.tracer_eq</a></li>
 <li><a href="thetis/tracer_eq_2d.html">thetis.tracer_eq_2d</a></li>
+<li><a href="thetis/turbines.html">thetis.turbines</a></li>
 <li><a href="thetis/turbulence.html">thetis.turbulence</a></li>
 <li><a href="thetis/utility.html">thetis.utility</a></li>
 <li><a href="traitlets/traitlets.html">traitlets.traitlets</a></li>
@@ -90,7 +92,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2016-2018, Tuomas Karna et al..
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.7.4.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.8.1.
     </div>
   </body>
 </html>
