--- a/_modules/thetis/solver2d.html
+++ b/_modules/thetis/solver2d.html
@@ -6,14 +6,14 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>thetis.solver2d &#8212; Thetis 0+untagged.1213.g0b06141 documentation</title>
+    <title>thetis.solver2d &#8212; Thetis 0+untagged.1276.g4e1ded2 documentation</title>
     <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
-    <script type="text/javascript" src="../../_static/documentation_options.js"></script>
+    <script type="text/javascript" id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
     <script type="text/javascript" src="../../_static/jquery.js"></script>
     <script type="text/javascript" src="../../_static/underscore.js"></script>
     <script type="text/javascript" src="../../_static/doctools.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script async="async" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
 <!--[if lte IE 6]>
@@ -228,8 +228,8 @@
 
 <span class="sd">        :kwarg float alpha: CFL number scaling factor</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="n">automatic_timestep</span> <span class="o">=</span> <span class="p">(</span><span class="nb">hasattr</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">options</span><span class="o">.</span><span class="n">timestepper_options</span><span class="p">,</span> <span class="s1">&#39;use_automatic_timestep&#39;</span><span class="p">)</span> <span class="ow">and</span>
-                              <span class="bp">self</span><span class="o">.</span><span class="n">options</span><span class="o">.</span><span class="n">timestepper_options</span><span class="o">.</span><span class="n">use_automatic_timestep</span><span class="p">)</span>
+        <span class="n">automatic_timestep</span> <span class="o">=</span> <span class="p">(</span><span class="nb">hasattr</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">options</span><span class="o">.</span><span class="n">timestepper_options</span><span class="p">,</span> <span class="s1">&#39;use_automatic_timestep&#39;</span><span class="p">)</span>
+                              <span class="ow">and</span> <span class="bp">self</span><span class="o">.</span><span class="n">options</span><span class="o">.</span><span class="n">timestepper_options</span><span class="o">.</span><span class="n">use_automatic_timestep</span><span class="p">)</span>
         <span class="c1"># TODO revisit math alpha is OBSOLETE</span>
         <span class="k">if</span> <span class="n">automatic_timestep</span><span class="p">:</span>
             <span class="n">mesh2d_dt</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">compute_time_step</span><span class="p">(</span><span class="n">u_scale</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">options</span><span class="o">.</span><span class="n">horizontal_velocity_scale</span><span class="p">)</span>
@@ -563,14 +563,24 @@
 
 <span class="sd">        :arg float cputime: Measured CPU time</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="n">norm_h</span> <span class="o">=</span> <span class="n">norm</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">fields</span><span class="o">.</span><span class="n">solution_2d</span><span class="o">.</span><span class="n">split</span><span class="p">()[</span><span class="mi">1</span><span class="p">])</span>
-        <span class="n">norm_u</span> <span class="o">=</span> <span class="n">norm</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">fields</span><span class="o">.</span><span class="n">solution_2d</span><span class="o">.</span><span class="n">split</span><span class="p">()[</span><span class="mi">0</span><span class="p">])</span>
+        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">options</span><span class="o">.</span><span class="n">tracer_only</span><span class="p">:</span>
+            <span class="n">norm_q</span> <span class="o">=</span> <span class="n">norm</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">fields</span><span class="o">.</span><span class="n">tracer_2d</span><span class="p">)</span>
 
-        <span class="n">line</span> <span class="o">=</span> <span class="p">(</span><span class="s1">&#39;</span><span class="si">{iexp:5d}</span><span class="s1"> </span><span class="si">{i:5d}</span><span class="s1"> T=</span><span class="si">{t:10.2f}</span><span class="s1"> &#39;</span>
-                <span class="s1">&#39;eta norm: </span><span class="si">{e:10.4f}</span><span class="s1"> u norm: </span><span class="si">{u:10.4f}</span><span class="s1"> </span><span class="si">{cpu:5.2f}</span><span class="s1">&#39;</span><span class="p">)</span>
-        <span class="n">print_output</span><span class="p">(</span><span class="n">line</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">iexp</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">i_export</span><span class="p">,</span> <span class="n">i</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">iteration</span><span class="p">,</span>
-                                 <span class="n">t</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">simulation_time</span><span class="p">,</span> <span class="n">e</span><span class="o">=</span><span class="n">norm_h</span><span class="p">,</span>
-                                 <span class="n">u</span><span class="o">=</span><span class="n">norm_u</span><span class="p">,</span> <span class="n">cpu</span><span class="o">=</span><span class="n">cputime</span><span class="p">))</span>
+            <span class="n">line</span> <span class="o">=</span> <span class="p">(</span><span class="s1">&#39;</span><span class="si">{iexp:5d}</span><span class="s1"> </span><span class="si">{i:5d}</span><span class="s1"> T=</span><span class="si">{t:10.2f}</span><span class="s1"> &#39;</span>
+                    <span class="s1">&#39;tracer norm: </span><span class="si">{q:10.4f}</span><span class="s1"> </span><span class="si">{cpu:5.2f}</span><span class="s1">&#39;</span><span class="p">)</span>
+
+            <span class="n">print_output</span><span class="p">(</span><span class="n">line</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">iexp</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">i_export</span><span class="p">,</span> <span class="n">i</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">iteration</span><span class="p">,</span>
+                                     <span class="n">t</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">simulation_time</span><span class="p">,</span> <span class="n">q</span><span class="o">=</span><span class="n">norm_q</span><span class="p">,</span>
+                                     <span class="n">cpu</span><span class="o">=</span><span class="n">cputime</span><span class="p">))</span>
+        <span class="k">else</span><span class="p">:</span>
+            <span class="n">norm_h</span> <span class="o">=</span> <span class="n">norm</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">fields</span><span class="o">.</span><span class="n">solution_2d</span><span class="o">.</span><span class="n">split</span><span class="p">()[</span><span class="mi">1</span><span class="p">])</span>
+            <span class="n">norm_u</span> <span class="o">=</span> <span class="n">norm</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">fields</span><span class="o">.</span><span class="n">solution_2d</span><span class="o">.</span><span class="n">split</span><span class="p">()[</span><span class="mi">0</span><span class="p">])</span>
+
+            <span class="n">line</span> <span class="o">=</span> <span class="p">(</span><span class="s1">&#39;</span><span class="si">{iexp:5d}</span><span class="s1"> </span><span class="si">{i:5d}</span><span class="s1"> T=</span><span class="si">{t:10.2f}</span><span class="s1"> &#39;</span>
+                    <span class="s1">&#39;eta norm: </span><span class="si">{e:10.4f}</span><span class="s1"> u norm: </span><span class="si">{u:10.4f}</span><span class="s1"> </span><span class="si">{cpu:5.2f}</span><span class="s1">&#39;</span><span class="p">)</span>
+            <span class="n">print_output</span><span class="p">(</span><span class="n">line</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">iexp</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">i_export</span><span class="p">,</span> <span class="n">i</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">iteration</span><span class="p">,</span>
+                                     <span class="n">t</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">simulation_time</span><span class="p">,</span> <span class="n">e</span><span class="o">=</span><span class="n">norm_h</span><span class="p">,</span>
+                                     <span class="n">u</span><span class="o">=</span><span class="n">norm_u</span><span class="p">,</span> <span class="n">cpu</span><span class="o">=</span><span class="n">cputime</span><span class="p">))</span>
         <span class="n">sys</span><span class="o">.</span><span class="n">stdout</span><span class="o">.</span><span class="n">flush</span><span class="p">()</span></div>
 
 <div class="viewcode-block" id="FlowSolver2d.iterate"><a class="viewcode-back" href="../../thetis.html#thetis.solver2d.FlowSolver2d.iterate">[docs]</a>    <span class="k">def</span> <span class="nf">iterate</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">update_forcings</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
@@ -624,7 +634,7 @@
             <span class="bp">self</span><span class="o">.</span><span class="n">export</span><span class="p">()</span>
             <span class="k">if</span> <span class="n">export_func</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span><span class="p">:</span>
                 <span class="n">export_func</span><span class="p">()</span>
-            <span class="k">if</span> <span class="s1">&#39;vtk&#39;</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">exporters</span><span class="p">:</span>
+            <span class="k">if</span> <span class="s1">&#39;vtk&#39;</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">exporters</span> <span class="ow">and</span> <span class="nb">isinstance</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">fields</span><span class="o">.</span><span class="n">bathymetry_2d</span><span class="p">,</span> <span class="n">Function</span><span class="p">):</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">exporters</span><span class="p">[</span><span class="s1">&#39;vtk&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">export_bathymetry</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">fields</span><span class="o">.</span><span class="n">bathymetry_2d</span><span class="p">)</span>
 
         <span class="n">initial_simulation_time</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">simulation_time</span>
@@ -663,7 +673,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2016-2018, Tuomas Karna et al..
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.7.4.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.8.1.
     </div>
   </body>
 </html>
