--- a/_modules/thetis/turbulence.html
+++ b/_modules/thetis/turbulence.html
@@ -6,14 +6,14 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>thetis.turbulence &#8212; Thetis 0+untagged.1213.g0b06141 documentation</title>
+    <title>thetis.turbulence &#8212; Thetis 0+untagged.1276.g4e1ded2 documentation</title>
     <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
-    <script type="text/javascript" src="../../_static/documentation_options.js"></script>
+    <script type="text/javascript" id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
     <script type="text/javascript" src="../../_static/jquery.js"></script>
     <script type="text/javascript" src="../../_static/underscore.js"></script>
     <script type="text/javascript" src="../../_static/doctools.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script async="async" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
 <!--[if lte IE 6]>
@@ -427,8 +427,8 @@
             <span class="k">for</span> <span class="n">i_comp</span><span class="p">,</span> <span class="n">solver</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">var_solvers</span><span class="p">):</span>
                 <span class="n">solver</span><span class="o">.</span><span class="n">solve</span><span class="p">()</span>
                 <span class="n">gamma</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">relaxation</span> <span class="k">if</span> <span class="ow">not</span> <span class="n">init_solve</span> <span class="k">else</span> <span class="mf">1.0</span>
-                <span class="n">mu_comp</span><span class="p">[</span><span class="n">i_comp</span><span class="p">]</span><span class="o">.</span><span class="n">assign</span><span class="p">(</span><span class="n">gamma</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">mu_tmp</span> <span class="o">+</span>
-                                       <span class="p">(</span><span class="mf">1.0</span> <span class="o">-</span> <span class="n">gamma</span><span class="p">)</span><span class="o">*</span><span class="n">mu_comp</span><span class="p">[</span><span class="n">i_comp</span><span class="p">])</span>
+                <span class="n">mu_comp</span><span class="p">[</span><span class="n">i_comp</span><span class="p">]</span><span class="o">.</span><span class="n">assign</span><span class="p">(</span><span class="n">gamma</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">mu_tmp</span>
+                                       <span class="o">+</span> <span class="p">(</span><span class="mf">1.0</span> <span class="o">-</span> <span class="n">gamma</span><span class="p">)</span><span class="o">*</span><span class="n">mu_comp</span><span class="p">[</span><span class="n">i_comp</span><span class="p">])</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">m2</span> <span class="o">+=</span> <span class="n">mu_comp</span><span class="p">[</span><span class="n">i_comp</span><span class="p">]</span><span class="o">*</span><span class="n">mu_comp</span><span class="p">[</span><span class="n">i_comp</span><span class="p">]</span>
             <span class="c1"># crop small/negative values</span>
             <span class="n">set_func_min_val</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">m2</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">minval</span><span class="p">)</span></div></div>
@@ -483,8 +483,8 @@
             <span class="k">if</span> <span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">_no_op</span><span class="p">:</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">var_solver</span><span class="o">.</span><span class="n">solve</span><span class="p">()</span>
                 <span class="n">gamma</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">relaxation</span> <span class="k">if</span> <span class="ow">not</span> <span class="n">init_solve</span> <span class="k">else</span> <span class="mf">1.0</span>
-                <span class="bp">self</span><span class="o">.</span><span class="n">n2</span><span class="o">.</span><span class="n">assign</span><span class="p">(</span><span class="n">gamma</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">n2_tmp</span> <span class="o">+</span>
-                               <span class="p">(</span><span class="mf">1.0</span> <span class="o">-</span> <span class="n">gamma</span><span class="p">)</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">n2</span><span class="p">)</span></div></div>
+                <span class="bp">self</span><span class="o">.</span><span class="n">n2</span><span class="o">.</span><span class="n">assign</span><span class="p">(</span><span class="n">gamma</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">n2_tmp</span>
+                               <span class="o">+</span> <span class="p">(</span><span class="mf">1.0</span> <span class="o">-</span> <span class="n">gamma</span><span class="p">)</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">n2</span><span class="p">)</span></div></div>
 
 
 <div class="viewcode-block" id="TurbulenceModel"><a class="viewcode-back" href="../../thetis.html#thetis.turbulence.TurbulenceModel">[docs]</a><span class="k">class</span> <span class="nc">TurbulenceModel</span><span class="p">(</span><span class="nb">object</span><span class="p">):</span>
@@ -609,8 +609,7 @@
         <span class="k">elif</span> <span class="n">stability_function_name</span> <span class="o">==</span> <span class="s1">&#39;Cheng&#39;</span><span class="p">:</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">stability_func</span> <span class="o">=</span> <span class="n">StabilityFunctionCheng</span><span class="p">(</span><span class="o">**</span><span class="n">stab_args</span><span class="p">)</span>
         <span class="k">else</span><span class="p">:</span>
-            <span class="k">raise</span> <span class="ne">Exception</span><span class="p">(</span><span class="s1">&#39;Unknown stability function type: &#39;</span> <span class="o">+</span>
-                            <span class="n">stability_function_name</span><span class="p">)</span>
+            <span class="k">raise</span> <span class="ne">Exception</span><span class="p">(</span><span class="s1">&#39;Unknown stability function type: &#39;</span> <span class="o">+</span> <span class="n">stability_function_name</span><span class="p">)</span>
 
         <span class="k">if</span> <span class="n">o</span><span class="o">.</span><span class="n">compute_cmu0</span><span class="p">:</span>
             <span class="n">o</span><span class="o">.</span><span class="n">cmu0</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">stability_func</span><span class="o">.</span><span class="n">compute_cmu0</span><span class="p">()</span>
@@ -898,14 +897,14 @@
             <span class="k">raise</span> <span class="ne">Exception</span><span class="p">(</span><span class="s1">&#39;v_elem_size required&#39;</span><span class="p">)</span>
         <span class="c1"># bottom condition</span>
         <span class="n">z_b</span> <span class="o">=</span> <span class="mf">0.5</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">v_elem_size</span> <span class="o">+</span> <span class="n">z0_friction</span>
-        <span class="n">diff_flux</span> <span class="o">=</span> <span class="p">(</span><span class="n">n</span><span class="o">*</span><span class="n">diffusivity_v</span><span class="o">*</span><span class="p">(</span><span class="n">cmu0</span><span class="p">)</span><span class="o">**</span><span class="n">p</span> <span class="o">*</span>
-                     <span class="n">k</span><span class="o">**</span><span class="n">m</span> <span class="o">*</span> <span class="n">kappa</span><span class="o">**</span><span class="n">n</span> <span class="o">*</span> <span class="n">z_b</span><span class="o">**</span><span class="p">(</span><span class="n">n</span> <span class="o">-</span> <span class="mf">1.0</span><span class="p">))</span>
+        <span class="n">diff_flux</span> <span class="o">=</span> <span class="p">(</span><span class="n">n</span><span class="o">*</span><span class="n">diffusivity_v</span><span class="o">*</span><span class="p">(</span><span class="n">cmu0</span><span class="p">)</span><span class="o">**</span><span class="n">p</span>
+                     <span class="o">*</span> <span class="n">k</span><span class="o">**</span><span class="n">m</span> <span class="o">*</span> <span class="n">kappa</span><span class="o">**</span><span class="n">n</span> <span class="o">*</span> <span class="n">z_b</span><span class="o">**</span><span class="p">(</span><span class="n">n</span> <span class="o">-</span> <span class="mf">1.0</span><span class="p">))</span>
         <span class="n">f</span> <span class="o">+=</span> <span class="n">diff_flux</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">test</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">normal</span><span class="p">[</span><span class="mi">2</span><span class="p">]</span><span class="o">*</span><span class="n">ds_bottom</span>
         <span class="c1"># surface condition</span>
         <span class="n">z0_surface</span> <span class="o">=</span> <span class="mf">0.5</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">v_elem_size</span> <span class="o">+</span> <span class="n">Constant</span><span class="p">(</span><span class="mf">0.02</span><span class="p">)</span>  <span class="c1"># TODO generalize</span>
         <span class="n">z_s</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">v_elem_size</span> <span class="o">+</span> <span class="n">z0_surface</span>
-        <span class="n">diff_flux</span> <span class="o">=</span> <span class="o">-</span><span class="p">(</span><span class="n">n</span><span class="o">*</span><span class="n">diffusivity_v</span><span class="o">*</span><span class="p">(</span><span class="n">cmu0</span><span class="p">)</span><span class="o">**</span><span class="n">p</span> <span class="o">*</span>
-                      <span class="n">k</span><span class="o">**</span><span class="n">m</span> <span class="o">*</span> <span class="n">kappa</span><span class="o">**</span><span class="n">n</span> <span class="o">*</span> <span class="n">z_s</span><span class="o">**</span><span class="p">(</span><span class="n">n</span> <span class="o">-</span> <span class="mf">1.0</span><span class="p">))</span>
+        <span class="n">diff_flux</span> <span class="o">=</span> <span class="o">-</span><span class="p">(</span><span class="n">n</span><span class="o">*</span><span class="n">diffusivity_v</span><span class="o">*</span><span class="p">(</span><span class="n">cmu0</span><span class="p">)</span><span class="o">**</span><span class="n">p</span>
+                      <span class="o">*</span> <span class="n">k</span><span class="o">**</span><span class="n">m</span> <span class="o">*</span> <span class="n">kappa</span><span class="o">**</span><span class="n">n</span> <span class="o">*</span> <span class="n">z_s</span><span class="o">**</span><span class="p">(</span><span class="n">n</span> <span class="o">-</span> <span class="mf">1.0</span><span class="p">))</span>
         <span class="n">f</span> <span class="o">+=</span> <span class="n">diff_flux</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">test</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">normal</span><span class="p">[</span><span class="mi">2</span><span class="p">]</span><span class="o">*</span><span class="n">ds_surf</span>
 
         <span class="k">return</span> <span class="n">f</span></div></div>
@@ -970,7 +969,7 @@
 
 
 <div class="viewcode-block" id="PsiEquation"><a class="viewcode-back" href="../../thetis.html#thetis.turbulence.PsiEquation">[docs]</a><span class="k">class</span> <span class="nc">PsiEquation</span><span class="p">(</span><span class="n">Equation</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;</span>
+    <span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Generic length scale equation :eq:`turb_psi_eq` without advection terms.</span>
 
 <span class="sd">    Advection of :math:`\psi` is implemented using the standard tracer equation.</span>
@@ -1136,7 +1135,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2016-2018, Tuomas Karna et al..
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.7.4.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.8.1.
     </div>
   </body>
 </html>
